second commit html

--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>My second commit GitHub</title>
+  <link rel type="text/css" href="css/style.css" />
 </head>
 <body>
 <h2>My second commit</h2>
